# connect-four-ai

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/benchmarking/: Cargo.toml
crates/benchmarking/benches/: game_result.rs  minimax_player.rs  random_game.rs
crates/benchmarking/src/: main.rs
crates/connect-four/: Cargo.toml
crates/connect-four/src/: lib.rs  main.rs
crates/connect-four/src/players/: io.rs  minimax.rs  mod.rs  random.rs
crates/game/: Cargo.toml
crates/game/src/: board.rs  builder.rs  error.rs  lib.rs  player.rs
crates/players/: Cargo.toml
crates/players/src/: io.rs  lib.rs  minimax.rs  policy_conv_nn.rs  random.rs  value_conv_nn.rs
crates/train/: Cargo.toml
crates/train/src/: evaluation.rs  lib.rs  main.rs  optimizers.rs  utils.rs
