[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
burn = { version = "0.9.0", features = ["ndarray", "wgpu"] }
game = { path = "crates/game" }
players = { path = "crates/players" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
typed-builder = "0.16.2"

[profile.dev]
opt-level = 2
