[package]
name = "train"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true }
game = { workspace = true }
players = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
